package com.example.paymentservice.model;

public class PaymentStatus {
}
